@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject()
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
    + response():void

}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # shootNum:int
    # direction
    # supplyFactory:SupplyFactory
    # trajectoryStrategy:TrajectoryStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp, TrajectoryStrategy trajectoryStrategy)
    + decreaseHp(int decrease):void
    + increaseHp(int increaseValue):void
    + getHp():int
    + getShootNum():int
    + getDirection:int
    + getShootDamage():int
    + shoot():List<BaseBullet>
    + forward():void
 }
class HeroAircraft {
    - {static}instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp, TrajectoryStrategy trajectoryStrategy)
    + {static}getHeroAircraftInstance():HeroAircraft
    + forward():void
    + bulletReinforce():int
}

AbstractAircraft <|-- HeroAircraft
AbstractFlyingObject <|-- AbstractAircraft



@enduml